update 32.11.2023 need to sleep

--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,4 +1,4 @@
-<h1>Welcome to "Home Page"</h1>
-<div class="wave"></div>
-<div class="wave"></div>
-<div class="wave"></div>
+<div>
+    <h1>Welcome to "Home Page"</h1>
+    <hr>
+</div>
