--- a/src/main/resources/templates/blocks/navbar.html
+++ b/src/main/resources/templates/blocks/navbar.html
@@ -1,8 +1,4 @@
-<div class="card">
-    <p>A glass-like card to demonstrate the <strong>Glassmorphism UI design</strong> trend.</p>
-    <div class="button-bar">
-        <a href="#" class="btn">Main</a>
-        <a href="#" class="btn">Upload</a>
-    </div>
-    <p class="card-footer">Created by Rahul C.</p>
+<div>
+    navigator...
+    <hr>
 </div>
