--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title th:text="${title}">title</title>
+        <link href="/css/home.css" rel="stylesheet">
     </head>
 
     <body>
@@ -14,6 +15,46 @@
             <progress id="progressBar" hidden></progress>
             <input type="submit" value="submit" onclick="document.getElementById('progressBar').hidden=false"><br>
         </form>
+        <hr>
+        <table>
+            <caption><h3><b>Загруженные данные</b></h3></caption>
+            <tr>
+                <th>№</th>
+                <th>id</th>
+                <th>uid</th>
+                <th>name</th>
+                <th>type</th>
+                <th>eTag</th>
+                <th>bucket</th>
+                <th>path</th>
+                <th>minioUrl</th>
+                <th>download button</th>
+                <th>delete button</th>
+                <th>file size</th>
+            </tr>
+            <tr th:each="file,itter : ${files}">
+                <td th:text="${itter.index}">#</td>
+                <td th:text="${file.getId()}">#</td>
+                <td th:text="${file.getUid()}"></td>
+                <td th:text="${file.getName()}"></td>
+                <td th:text="${file.getType()}">#</td>
+                <td th:text="${file.getETag()}">#</td>
+                <td th:text="${file.getBucket()}">#</td>
+                <td th:text="${file.getPath()}">#</td>
+                <td th:text="${file.getMinioUrl()}">#</td>
+                <td style="text-align: center">
+                    <form th:method="GET" th:action="@{/download/{id}(id=${file.getId()})}">
+                        <input type="submit" value="download">
+                    </form>
+                </td>
+                <td style="text-align: center">
+                    <form th:method="GET" th:action="@{/delete/{id}(id=${file.getId()})}">
+                        <input type="submit" value="delete">
+                    </form>
+                </td>
+                <td th:text="${file.getFileSize()} + ' MB'"></td>
+            </tr>
+        </table>
 
         <footer th:insert="~{blocks/footer}"></footer>
     </body>
