--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,4 +1,4 @@
 <div>
     <h1>Welcome to project "Supreme"</h1>
-    <hr>
+    <section class="separator-wrapper"><div class="separator gradient"></div></section>
 </div>
