--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -1,4 +1,4 @@
 <div>
-    <hr>
+    <section class="separator-wrapper"><div class="separator gradient"></div></section>
     supreme footer
 </div>
