--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -1,4 +1,15 @@
-<div>
-    <section class="separator-wrapper"><div class="separator gradient"></div></section>
-    supreme footer
+<div class="row footer blacked">
+    <div class="col-33 text-right">
+        <p>Разработано в ФГБУ "ФЦПСР"</p>
+    </div>
+    <div class="col-33 text-center">
+        <ul class="footer-navbar">
+            <li><a href="#">Materials</a></li>
+        </ul>
+    </div>
+    <div class="col-33 text-left">
+        <p>Spring Framework</p>
+        <p>Postgres</p>
+        <p>MinIO</p>
+    </div>
 </div>
