--- a/src/main/resources/templates/blocks/navbar.html
+++ b/src/main/resources/templates/blocks/navbar.html
@@ -1,3 +1,14 @@
-<div>
-    supreme navigator
+<div class="row whited">
+    <div class="col-20">
+
+    </div>
+    <div class="col-60">
+        <ul class="navbar">
+            <li class="float-left"><a href="#">Materials</a></li>
+            <li class="float-right"><a href="#">Login</a></li>
+        </ul>
+    </div>
+    <div class="col-20">
+
+    </div>
 </div>
