update 29.11.2023 Integration of a non-flat role system has begun: - the main classes of models and diagrams have been written

--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -1,4 +1,21 @@
-<div>
-    <section class="separator-wrapper"><div class="separator gradient"></div></section>
-    supreme footer
+<div class="row-100">
+    <div class="col-20">
+        <ul class="footer-navbar text-right">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Materials</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Login</a></li>
+        </ul>
+    </div>
+    <div class="col-60">
+        <p class="flex-center" style="font-size: 2vh">Разработано ФГБУ "ФЦПСР"</p>
+    </div>
+    <div class="col-20 flex-center">
+        <ul class="footer-navbar text-left">
+            <li><a>Tech:</a></li>
+            <li><a href="#">Spring Framework</a></li>
+            <li><a href="#">Postgresql</a></li>
+            <li><a href="#">MinIO</a></li>
+        </ul>
+    </div>
 </div>
