--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,4 +1,7 @@
-<div>
-    <h1>Welcome to project "Supreme"</h1>
-    <section class="separator-wrapper"><div class="separator gradient"></div></section>
+<div class="row-100 whited">
+    <div class="col-20"></div>
+    <div class="col-60">
+        <h1 class="flex-center">Welcome to project "Supreme"</h1>
+    </div>
+    <div class="col-20"></div>
 </div>
