--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -7,8 +7,8 @@
             <li><a href="#">Login</a></li>
         </ul>
     </div>
-    <div class="col-60">
-        <p class="flex-center" style="font-size: 2vh">Разработано ФГБУ "ФЦПСР"</p>
+    <div class="col-60 text-center">
+        <p style="font-size: 18px">Разработано ФГБУ "ФЦПСР"</p>
     </div>
     <div class="col-20 flex-center">
         <ul class="footer-navbar text-left">
