--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,7 +1,7 @@
-<div class="row-100 whited">
+<div class="row-100 whited text-center">
     <div class="col-20"></div>
     <div class="col-60">
-        <h1 class="flex-center">Welcome to project "Supreme"</h1>
+        <h1>Welcome to project "Supreme"</h1>
     </div>
     <div class="col-20"></div>
 </div>
