--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -13,7 +13,8 @@
         <header th:insert="~{blocks/header}"></header>
         <nav th:insert="~{blocks/navbar}"></nav>
 
-
+        <div th:insert="~{content/login-page}" th:if="${index} == 'login-page'"></div>
+        <div th:insert="~{content/reg-page}" th:if="${index} == 'reg-page'"></div>
 
         <footer th:insert="~{blocks/footer}"></footer>
     </body>
