--- a/src/main/resources/templates/content/reg-page.html
+++ b/src/main/resources/templates/content/reg-page.html
@@ -1,30 +1,74 @@
 <div class="row-100 whited">
     <div class="col-20"></div>
-    <div class="col-60">
-        <hr>
-        <div style="display: inline-flex; width: 100%; height: 70vh">
-            <form th:method="POST" th:action="@{/auth/reg}" th:object="${user}" style="margin: auto; padding: 2vh">
-                <h4>Registration form</h4>
-                <p>your e-mail</p>
-                <input type="email" th:field="*{eMail}"><br>
-                <p>password</p>
-                <input type="password" th:field="*{password}"><br>
-                <p>confirm your password</p>
-                <input type="password" th:field="*{confirmPassword}"><br>
-                <p>first name</p>
-                <input type="text" th:field="*{firstName}"><br>
-                <p>middle name</p>
-                <input type="text" th:field="*{middleName}"><br>
-                <p>lastname</p>
-                <input type="text" th:field="*{lastName}"><br>
-                <p>birthday</p>
-                <input type="date" th:field="*{birthday}"><br>
-                <p>phone number</p>
-                <input type="text" th:field="*{phone}"><br>
-                <input type="submit" value="Submit"><br>
-            </form>
-        </div>
-        <hr>
+    <div class="col-60-inline-flex" style="height: 700px">
+        <form th:method="POST" th:action="@{/auth/reg}" th:object="${user}" class="flex-center" style="width: 100%">
+            <hr>
+            <div class="row-100" style="display: inline-flex; padding: 1vh">
+                <h4 style="margin: auto">Registration form</h4>
+            </div>
+            <div class="col-50-inline-flex" style="width: 50%; height: 500px">
+                <div class="flex-center">
+                    <p>your e-mail</p>
+                    <input type="email" th:field="*{eMail}"><br>
+                    <p>password</p>
+                    <input type="password" th:field="*{password}"><br>
+                    <p>confirm your password</p>
+                    <input type="password" th:field="*{confirmPassword}"><br>
+                    <p>first name</p>
+                    <input type="text" th:field="*{firstName}"><br>
+                    <p>middle name</p>
+                    <input type="text" th:field="*{middleName}"><br>
+                    <p>lastname</p>
+                    <input type="text" th:field="*{lastName}"><br>
+                    <p>birthday</p>
+                    <input type="date" th:field="*{birthday}"><br>
+                    <p>phone number</p>
+                    <input type="text" th:field="*{phone}"><br>
+                </div>
+            </div>
+            <div class="col-50-inline-flex" style="width: 50%; height: 500px">
+                <div class="flex-center">
+                    <input type="checkbox" name="admin" id="admin" onclick="setAdmin()">
+                    <label for="admin">admin</label><br>
+                    <input type="checkbox" name="moderator" id="moderator" onclick="setModerator()">
+                    <label for="moderator">moderator</label><br>
+                    <div id="hidden-block" hidden>
+                        <div style="display:block; width: 300px; padding: 1vh" class="border">
+                            <input type="checkbox" style="display: inline-block">Test
+                        </div>
+                    </div>
+                    <input type="checkbox" name="publisher" id="publisher" onclick="setPublisher()">
+                    <label for="publisher">publisher</label><br>
+                </div>
+            </div>
+            <div class="row-100" style="display: inline-flex; padding: 1vh">
+                <input type="submit" value="Submit" style="margin: auto"><br>
+            </div>
+            <hr>
+        </form>
     </div>
     <div class="col-20"></div>
 </div>
+
+
+<!--
+<form th:method="POST" th:action="@{/auth/reg}" th:object="${user}" style="margin: auto; padding: 2vh">
+    <h4>Registration form</h4>
+    <p>your e-mail</p>
+    <input type="email" th:field="*{eMail}"><br>
+    <p>password</p>
+    <input type="password" th:field="*{password}"><br>
+    <p>confirm your password</p>
+    <input type="password" th:field="*{confirmPassword}"><br>
+    <p>first name</p>
+    <input type="text" th:field="*{firstName}"><br>
+    <p>middle name</p>
+    <input type="text" th:field="*{middleName}"><br>
+    <p>lastname</p>
+    <input type="text" th:field="*{lastName}"><br>
+    <p>birthday</p>
+    <input type="date" th:field="*{birthday}"><br>
+    <p>phone number</p>
+    <input type="text" th:field="*{phone}"><br>
+    <input type="submit" value="Submit"><br>
+</form>-->
