--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -7,6 +7,7 @@
         <link href="/css/grid.css" rel="stylesheet">
         <link href="/css/color-and-align.css" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+        <script src="/js/reg-checkbox.js" th:inline="javascript"></script>
     </head>
 
     <body>
