--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -1,10 +1,10 @@
 <div class="row-100">
     <div class="col-20">
         <ul class="footer-navbar text-right">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Materials</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Login</a></li>
+            <li><a th:href="@{/}">Home</a></li>
+            <li><a th:href="@{/material}">Materials</a></li>
+            <li><a th:href="@{/contact}">Contact</a></li>
+            <li><a th:href="@{/auth/login}">Login</a></li>
         </ul>
     </div>
     <div class="col-60 text-center">
