--- a/src/main/resources/templates/content/reg-page.html
+++ b/src/main/resources/templates/content/reg-page.html
@@ -1,74 +1,81 @@
 <div class="row-100 whited">
     <div class="col-20"></div>
-    <div class="col-60-inline-flex" style="height: 700px">
+    <div class="col-60-inline-flex" style="min-height: 700px">
         <form th:method="POST" th:action="@{/auth/reg}" th:object="${user}" class="flex-center" style="width: 100%">
             <hr>
             <div class="row-100" style="display: inline-flex; padding: 1vh">
                 <h4 style="margin: auto">Registration form</h4>
             </div>
-            <div class="col-50-inline-flex" style="width: 50%; height: 500px">
+            <div class="col-50-inline-flex" style="width: 50%; min-height: 500px">
                 <div class="flex-center">
                     <p>your e-mail</p>
-                    <input type="email" th:field="*{eMail}"><br>
+                    <input type="email" th:field="*{mail}"><br>
+                    <div th:if="${#fields.hasErrors('mail')}" style="border: solid 1px red; background: pink">
+                        <p th:errors="*{mail}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
+                    </div>
                     <p>password</p>
                     <input type="password" th:field="*{password}"><br>
+                    <div th:if="${#fields.hasErrors('password')}" style="border: solid 1px red; background: pink">
+                        <p th:errors="*{password}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
+                    </div>
                     <p>confirm your password</p>
                     <input type="password" th:field="*{confirmPassword}"><br>
+                    <div th:if="${#fields.hasErrors('confirmPassword')}" style="border: solid 1px red; background: pink">
+                        <p th:errors="*{confirmPassword}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
+                    </div>
                     <p>first name</p>
                     <input type="text" th:field="*{firstName}"><br>
+                    <div th:if="${#fields.hasErrors('firstName')}" style="border: solid 1px red; background: pink">
+                        <p th:errors="*{firstName}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
+                    </div>
                     <p>middle name</p>
                     <input type="text" th:field="*{middleName}"><br>
+                    <div th:if="${#fields.hasErrors('middleName')}" style="border: solid 1px red; background: pink">
+                        <p th:errors="*{middleName}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
+                    </div>
                     <p>lastname</p>
                     <input type="text" th:field="*{lastName}"><br>
+                    <div th:if="${#fields.hasErrors('lastName')}" style="border: solid 1px red; background: pink">
+                        <p th:errors="*{lastName}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
+                    </div>
                     <p>birthday</p>
-                    <input type="date" th:field="*{birthday}"><br>
+                    <input type="date" th:field="*{birthday}" style="width: 161px"><br>
+                    <div th:if="${#fields.hasErrors('birthday')}" style="border: solid 1px red; background: pink">
+                        <p th:errors="*{birthday}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
+                    </div>
                     <p>phone number</p>
                     <input type="text" th:field="*{phone}"><br>
+                    <div th:if="${#fields.hasErrors('phone')}" style="border: solid 1px red; background: pink">
+                        <p th:errors="*{phone}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
+                    </div>
                 </div>
             </div>
-            <div class="col-50-inline-flex" style="width: 50%; height: 500px">
+            <div class="col-50-inline-flex" style="width: 50%; min-height: 500px">
                 <div class="flex-center">
-                    <input type="checkbox" name="admin" id="admin" onclick="setAdmin()">
+                    <input type="checkbox" name="admin" id="admin" th:field="*{admin}" onclick="setAdmin()">
                     <label for="admin">admin</label><br>
-                    <input type="checkbox" name="moderator" id="moderator" onclick="setModerator()">
-                    <label for="moderator">moderator</label><br>
+                    <input type="checkbox" name="moderator" id="moderator" th:field="*{moderator}" th:if="${sportTags.size()} != 0" onclick="setModerator()">
+                    <label for="moderator" th:if="${sportTags.size()} != 0">moderator</label>
+                    <br th:if="${sportTags.size()} != 0">
                     <div id="hidden-block" hidden>
                         <div style="display:block; width: 300px; padding: 1vh" class="border">
-                            <input type="checkbox" style="display: inline-block">Test
+                            <div style="display: inline-block" th:each="st : ${sportTags}">
+                                <input type="checkbox" th:name="sportTag" th:value="${st.getId()}"><span th:text="${st.getName()}"></span>
+                            </div>
                         </div>
                     </div>
-                    <input type="checkbox" name="publisher" id="publisher" onclick="setPublisher()">
-                    <label for="publisher">publisher</label><br>
+                    <input type="checkbox" name="publisher" id="publisher" th:field="*{publisher}" onclick="setPublisher()" th:if="${sportTags.size()} != 0">
+                    <label for="publisher" th:if="${sportTags.size()} != 0">publisher</label><br>
+                    <div th:if="${#fields.hasErrors('admin')}" style="border: solid 1px red; background: pink">
+                        <p th:errors="*{admin}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
+                    </div>
                 </div>
             </div>
             <div class="row-100" style="display: inline-flex; padding: 1vh">
-                <input type="submit" value="Submit" style="margin: auto"><br>
+                <input type="submit" value="Submit" class="input-button" style="margin: auto"><br>
             </div>
             <hr>
         </form>
     </div>
     <div class="col-20"></div>
 </div>
-
-
-<!--
-<form th:method="POST" th:action="@{/auth/reg}" th:object="${user}" style="margin: auto; padding: 2vh">
-    <h4>Registration form</h4>
-    <p>your e-mail</p>
-    <input type="email" th:field="*{eMail}"><br>
-    <p>password</p>
-    <input type="password" th:field="*{password}"><br>
-    <p>confirm your password</p>
-    <input type="password" th:field="*{confirmPassword}"><br>
-    <p>first name</p>
-    <input type="text" th:field="*{firstName}"><br>
-    <p>middle name</p>
-    <input type="text" th:field="*{middleName}"><br>
-    <p>lastname</p>
-    <input type="text" th:field="*{lastName}"><br>
-    <p>birthday</p>
-    <input type="date" th:field="*{birthday}"><br>
-    <p>phone number</p>
-    <input type="text" th:field="*{phone}"><br>
-    <input type="submit" value="Submit"><br>
-</form>-->
