--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -14,8 +14,14 @@
         <header th:insert="~{blocks/header}"></header>
         <nav th:insert="~{blocks/navbar}"></nav>
 
+        <div th:insert="~{content/home-page}" th:if="${index} == 'home-page'"></div>
+        <div th:insert="~{content/material-page}" th:if="${index} == 'material-page'"></div>
+        <div th:insert="~{content/contact-page}" th:if="${index} == 'contact-page'"></div>
+        <div th:insert="~{content/admin-page}" th:if="${index} == 'admin-page'"></div>
         <div th:insert="~{content/login-page}" th:if="${index} == 'login-page'"></div>
         <div th:insert="~{content/reg-page}" th:if="${index} == 'reg-page'"></div>
+        <div th:insert="~{content/tag-page}" th:if="${index} == 'tag-page'"></div>
+        <div th:insert="~{content/add-post-page}" th:if="${index} == 'add-post-page'"></div>
 
         <footer th:insert="~{blocks/footer}"></footer>
     </body>
