--- a/src/main/resources/static/css/color-and-align.css
+++ b/src/main/resources/static/css/color-and-align.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Exo:400,700');
+
+* {
+    font-family: 'Exo', sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background: mediumpurple;
     color: whitesmoke;
