--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -4,9 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title th:text="${title}">title</title>
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
         <link href="/css/grid.css" rel="stylesheet">
         <link href="/css/color-and-align.css" rel="stylesheet">
-        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
         <script src="/js/reg-checkbox.js" th:inline="javascript"></script>
     </head>
 
@@ -24,5 +28,13 @@
         <div th:insert="~{content/add-post-page}" th:if="${index} == 'add-post-page'"></div>
 
         <footer th:insert="~{blocks/footer}"></footer>
+
+        <script>
+            $(document).ready(function() {
+                $('#summernote').summernote({
+                    height: 300
+                });
+            });
+        </script>
     </body>
 </html>
