--- a/src/main/resources/static/css/color-and-align.css
+++ b/src/main/resources/static/css/color-and-align.css
@@ -45,7 +45,7 @@ body {
     color: whitesmoke;
 }
 
-.navbar li a:hover:not(.active) {
+.my-navbar li a:hover:not(.active) {
     background-color: rebeccapurple;
     color: whitesmoke;
 }
@@ -70,4 +70,9 @@ body {
 
 .input-button:hover {
     background: purple;
+}
+
+.shadow {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
 }
