--- a/src/main/resources/templates/content/material-page.html
+++ b/src/main/resources/templates/content/material-page.html
@@ -22,8 +22,8 @@
 <div class="row-100-block whited">
     <div class="col-20"></div>
     <div class="col-60-inline-flex">
-        <div class="flex-center" style="height: 60vh">
-            POST
+        <div class="flex-center" th:each="post : ${posts}">
+            <div th:utext="${post.getContent()}"></div>
         </div>
     </div>
     <div class="col-20"></div>
