--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -1,10 +1,10 @@
 <div class="row-100">
     <div class="col-20">
         <ul class="footer-navbar text-right">
-            <li><a th:href="@{/}">Home</a></li>
-            <li><a th:href="@{/material}">Materials</a></li>
-            <li><a th:href="@{/contact}">Contact</a></li>
-            <li><a th:href="@{/auth/login}">Login</a></li>
+            <li><a th:href="@{/}">Главная</a></li>
+            <li><a th:href="@{/material}">Редакция</a></li>
+            <li><a th:href="@{/contact}">Контакты</a></li>
+            <li><a th:href="@{/auth/login}">Вход</a></li>
         </ul>
     </div>
     <div class="col-60 text-center">
@@ -12,7 +12,7 @@
     </div>
     <div class="col-20 flex-center">
         <ul class="footer-navbar text-left">
-            <li><a>Tech:</a></li>
+            <li><a>Технологии:</a></li>
             <li><a href="#">Spring Framework</a></li>
             <li><a href="#">Postgresql</a></li>
             <li><a href="#">MinIO</a></li>
