--- a/src/main/resources/templates/blocks/navbar.html
+++ b/src/main/resources/templates/blocks/navbar.html
@@ -1,20 +1,23 @@
-<div class="row-100-block" style="height: 47.5px">
+<div class="row-100-block">
     <form id="logoutForm" method="post" th:action="@{/logout}"></form>
-    <ul class="my-navbar blacked">
-        <li class="float-left"><a id="home" class="active" th:href="@{/}" onclick="setActive(this.id)">Home</a></li>
-        <li class="float-left"><a id="materials" class="whited" th:href="@{/material}" onclick="setActive(this.id)">Materials</a></li>
-        <li class="float-left"><a id="contact" class="whited" th:href="@{/contact}" onclick="setActive(this.id)">Contact</a></li>
-        <li th:if="${!baseAuth}" class="float-right"><a id="login" class="whited" th:href="@{/auth/login}" onclick="setActive(this.id)">Login</a></li>
-        <li th:if="${baseAuth}" class="float-right"><a id="logout" class="whited" href="#" onclick="document.getElementById('logoutForm').submit()">Logout</a></li>
-        <li th:if="${baseAuth} and ${roleAdmin}" class="float-right"><a class="whited" th:href="@{/admin}">Admin</a></li>
-        <script>
-            function setActive(id){
-                document.getElementById('home').className='whited'
-                document.getElementById('materials').className='whited'
-                document.getElementById('contact').className='whited'
-                document.getElementById('login').className='whited'
-                document.getElementById(id).className='active'
-            }
-        </script>
+    <ul class="my-navbar">
+        <li class="float-left">
+            <a id="home" th:href="@{/}">Главная</a>
+        </li>
+        <li class="float-left">
+            <a id="materials" th:href="@{/material}">Редакция</a>
+        </li>
+        <li class="float-left">
+            <a id="contact" th:href="@{/contact}">Контакты</a>
+        </li>
+        <li th:if="${!baseAuth}" class="float-right">
+            <a id="login" th:href="@{/auth/login}">Вход</a>
+        </li>
+        <li th:if="${baseAuth}" class="float-right">
+            <a id="logout" href="#" onclick="document.getElementById('logoutForm').submit()">Выход</a>
+        </li>
+        <li th:if="${baseAuth} and ${roleAdmin}" class="float-right">
+            <a class="whited" th:href="@{/admin}">Админ</a>
+        </li>
     </ul>
 </div>
