--- a/src/main/resources/templates/content/add-post-page.html
+++ b/src/main/resources/templates/content/add-post-page.html
@@ -1,30 +1,29 @@
 <div class="row-100 whited">
     <div class="col-20"></div>
     <div class="col-60">
-        <hr>
         <div style="display: inline-flex; width: 100%">
-            <form th:method="POST" th:action="@{/material/post}" th:object="${post}" class="flex-center" style="padding: 2vh; width: 100%" enctype="multipart/form-data">
-                <h4 style="padding: 1vh" class="text-center">add new post</h4>
-                <span style="padding: 0 2vh">name</span>
-                <input type="text" placeholder="post name" style="width: 100%; margin: 1vh; padding: 1vh" th:field="*{name}">
+            <form th:method="POST" th:action="@{/material/post}" th:object="${post}" class="flex-center shadow" style="padding: 2vh; width: 100%" enctype="multipart/form-data">
+                <h2 style="padding: 1vh" class="text-center">Добавить методический материал</h2>
+                <span style="padding: 0 2vh">Название</span>
+                <input type="text" placeholder="название" style="width: 100%; margin: 1vh; padding: 1vh" th:field="*{name}">
                 <div th:if="${#fields.hasErrors('name')}" style="border: solid 1px red; background: pink; margin-left: 1vh">
                     <p th:errors="*{name}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
                 </div>
-                <p style="padding: 0 2vh">annotation</p>
-                <textarea type="text" placeholder="post annotation" rows="3" style="width: 100%; margin: 1vh; padding: 1vh; resize: none" th:field="*{annotation}"></textarea>
+                <p style="padding: 0 2vh">Аннотация</p>
+                <textarea type="text" placeholder="аннотация" rows="3" style="width: 100%; margin: 1vh; padding: 1vh; resize: none" th:field="*{annotation}"></textarea>
                 <div th:if="${#fields.hasErrors('annotation')}" style="border: solid 1px red; background: pink; margin-left: 1vh">
                     <p th:errors="*{annotation}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
                 </div>
-                <p style="padding: 0 2vh">content</p>
+                <p style="padding: 0 2vh">Краткое содержание</p>
                 <div style="padding: 1vh">
-                    <textarea placeholder="post content" id="summernote" th:field="*{content}"></textarea>
+                    <textarea placeholder="содержание" id="summernote" th:field="*{content}"></textarea>
                 </div>
                 <div th:if="${#fields.hasErrors('content')}" style="border: solid 1px red; background: pink; margin-left: 1vh">
                     <p th:errors="*{content}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
                 </div>
 
-                <div style="margin: 1vh">
-                    <div style="display: inline-block" th:each="st : ${sportTags}" class="border">
+                <div style="margin: 1vh" class="shadow">
+                    <div style="display: inline-block" th:each="st : ${sportTags}">
                         <div style="padding: 1vh">
                             <img th:src="${st.getImagePath()}" width="32px" height="32px" style="margin-left: auto; margin-right: auto; display: block"><br>
                             <input type="checkbox" name="sportTag" th:value="${st.getId()}"><span th:text="${st.getName()}"></span>
@@ -35,7 +34,7 @@
                     <p th:errors="*{sportTagIds}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
                 </div>
                 <div style="margin: 1vh">
-                    <p>add post image: </p>
+                    <p>Изображение на карточку материала: </p>
                     <input type="hidden" accept="image/*" id="imageFake" disabled="disabled">
                     <input type="file" accept="image/*" id="image" th:field="*{image}"><br>
                     <progress id="imageProgressBar" hidden></progress>
@@ -43,7 +42,7 @@
                         <p th:errors="*{image}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
                     </div>
                     <br>
-                    <p>add file materials: </p>
+                    <p>Файл с методическими материалами: </p>
                     <input type="hidden" accept="*/*" id="fileFake" disabled="disabled">
                     <input type="file" accept="*/*" id="file" th:field="*{file}"><br>
                     <progress id="progressBar" hidden></progress>
@@ -51,8 +50,8 @@
                         <p th:errors="*{file}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
                     </div>
                     <br>
-                    <input class="input-button" id="inputButtonFake" type="submit" value="submit" hidden disabled="disabled">
-                    <input class="input-button" id="inputButton" type="submit" value="submit" onclick="hiddenControl()">
+                    <input class="input-button" id="inputButtonFake" type="submit" value="Отправить" hidden disabled="disabled">
+                    <input class="input-button" id="inputButton" type="submit" value="Отправить" onclick="hiddenControl()">
                     <script>
                         function hiddenControl(){
                             document.getElementById('progressBar').hidden=false
@@ -74,7 +73,6 @@
                 </div>
             </form>
         </div>
-        <hr>
     </div>
     <div class="col-20"></div>
 </div>
