--- a/src/main/resources/templates/content/admin-page.html
+++ b/src/main/resources/templates/content/admin-page.html
@@ -1,41 +1,13 @@
-<div class="row-100 whited">
+<div class="row-100-block whited">
   <div class="col-20"></div>
-  <div class="col-60" style="min-height: 700px">
-    <hr>
-    <div style="display: inline-flex; width: 100%; height: 70vh">
-      <table style="margin: auto; padding: 2vh" class="border">
-        <thead>
-          <tr>
-            <th colspan="2">
-              <p>Admin function</p>
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>
-              <p>Registration new user</p>
-            </td>
-            <td style="padding: 1vh">
-              <form th:method="GET" th:action="@{/auth/reg}">
-                <input type="submit" value="registered" class="input-button">
-              </form>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <p>Registration new sport tag</p>
-            </td>
-            <td style="padding: 1vh">
-              <form th:method="GET" th:action="@{/admin/tag}">
-                <input type="submit" value="registered" class="input-button">
-              </form>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+  <div class="col-60 text-center">
+    <div class="row-100" style="height: 70vh">
+      <div class="flex-center shadow" style="padding: 2vh">
+        <h3>Управление сервисом</h3>
+        <p><a th:href="@{/auth/reg}">Регистрация пользователя</a></p>
+        <p><a th:href="@{/admin/tag}">Добавление спортивного тега</a></p>
+      </div>
     </div>
-    <hr>
   </div>
   <div class="col-20"></div>
 </div>
