--- a/src/main/resources/templates/content/material-page.html
+++ b/src/main/resources/templates/content/material-page.html
@@ -22,8 +22,14 @@
 <div class="row-100-block whited">
     <div class="col-20"></div>
     <div class="col-60-inline-flex">
-        <div class="flex-center" th:each="post : ${posts}">
-            <div th:utext="${post.getContent()}"></div>
+        <div class="row-100-block shadow" th:each="post : ${posts}">
+            <dib class="col-60 media-type">
+                <h2 th:text="${post.getName()}"></h2>
+                <p th:text="${post.getAnnotation()}"></p>
+            </dib>
+            <dib class="col-40 media-type">
+                <img class="image" th:src="${post.getImagePath()}">
+            </dib>
         </div>
     </div>
     <div class="col-20"></div>
