--- a/src/main/resources/templates/content/tag-page.html
+++ b/src/main/resources/templates/content/tag-page.html
@@ -1,10 +1,9 @@
 <div class="row-100 whited">
     <div class="col-20"></div>
     <div class="col-60">
-        <hr>
         <div style="display: inline-flex; width: 100%; min-height: 70vh">
-            <form th:method="POST" th:action="@{/admin/tag}" th:object="${sportTag}" style="margin: auto; padding: 2vh" enctype="multipart/form-data">
-                <h4>Register new Sport Tag</h4>
+            <form th:method="POST" th:action="@{/admin/tag}" th:object="${sportTag}" class="shadow" style="margin: auto; padding: 2vh" enctype="multipart/form-data">
+                <h2>Register new Sport Tag</h2>
                 <p>name</p>
                 <input placeholder="Sport tag name" type="text" th:field="*{name}">
                 <br>
@@ -37,7 +36,6 @@
                 </script>
             </form>
         </div>
-        <hr>
     </div>
     <div class="col-20"></div>
 </div>
