update: 07-12-2023 (dd-MM-yyyy)
- create post saver

--- a/src/main/resources/templates/blocks/navbar.html
+++ b/src/main/resources/templates/blocks/navbar.html
@@ -4,7 +4,7 @@
         <li class="float-left">
             <a id="home" th:href="@{/}">Главная</a>
         </li>
-        <li class="float-left">
+        <li th:if="${roleAdmin} or ${roleModerator} or ${rolePublisher}" class="float-left">
             <a id="materials" th:href="@{/material}">Редакция</a>
         </li>
         <li class="float-left">
