--- a/src/main/resources/templates/content/contact-page.html
+++ b/src/main/resources/templates/content/contact-page.html
@@ -1,7 +1,7 @@
 <div class="row-100 whited">
   <div class="col-20"></div>
   <div class="col-60">
-    <div style="display: inline-flex; width: 100%; height: 70vh">
+    <div style="display: inline-flex; width: 100%; min-height: 70vh">
       Contact-Page-TEST
     </div>
   </div>
