--- a/src/main/resources/templates/content/home-page.html
+++ b/src/main/resources/templates/content/home-page.html
@@ -1,7 +1,21 @@
+<div class="row-100-block whited">
+    <div class="col-20"></div>
+    <div class="col-60" style="display: flex">
+        <div class="col-100-inline-flex">
+            <div class="flex-center" style="width: 100%">
+                <form th:method="POST" th:action="@{/matrial/search}">
+                    <input type="text" placeholder="поиск материалов" style="width: 70%; height: 30px">
+                    <input type="submit" value="поиск" class="input-button" style="width: 20%">
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="col-20"></div>
+</div>
 <div class="row-100 whited">
     <div class="col-20"></div>
-    <div class="col-60">
-        <div style="display: inline-flex; width: 100%; height: 70vh">
+    <div class="col-60" style="min-height: 60vh">
+        <div style="display: inline-flex; width: 100%">
             Home-Page-TEST
         </div>
     </div>
