--- a/src/main/resources/templates/content/material-page.html
+++ b/src/main/resources/templates/content/material-page.html
@@ -4,8 +4,8 @@
         <div class="col-70-inline-flex">
             <div class="flex-center" style="width: 100%">
                 <form th:method="POST" th:action="@{/matrial/search}">
-                    <input type="text" placeholder="search material" style="width: 70%; height: 30px">
-                    <input type="submit" value="search" class="input-button" style="width: 20%">
+                    <input type="text" placeholder="поиск материалов" style="width: 70%; height: 30px">
+                    <input type="submit" value="поиск" class="input-button" style="width: 20%">
                 </form>
             </div>
         </div>
@@ -22,7 +22,14 @@
 <div class="row-100-block whited">
     <div class="col-20"></div>
     <div class="col-60-inline-flex">
-        <div class="row-100-block shadow" th:each="post : ${posts}">
+        <div class="row-100-block" th:each="category : ${categories}">
+            <p th:text="${category.getSportTag().getName()}"></p>
+        </div>
+    </div>
+    <div class="col-20"></div>
+</div>
+
+<!--<div class="row-100-block shadow" th:each="post : ${posts}">
             <dib class="col-60 media-type">
                 <h2 th:text="${post.getName()}"></h2>
                 <p th:text="${post.getAnnotation()}"></p>
@@ -30,7 +37,4 @@
             <dib class="col-40 media-type">
                 <img class="image" th:src="${post.getImagePath()}">
             </dib>
-        </div>
-    </div>
-    <div class="col-20"></div>
-</div>
+        </div>-->
