--- a/src/main/resources/static/css/color-and-align.css
+++ b/src/main/resources/static/css/color-and-align.css
@@ -63,10 +63,12 @@ body {
 
 .link-decoration {
     text-decoration: none;
+    color: #111111;
 }
 
 .link-decoration:hover {
     text-decoration: none;
+    color: #111111;
 }
 
 .shadow {
