--- a/src/main/resources/templates/content/material-page.html
+++ b/src/main/resources/templates/content/material-page.html
@@ -22,8 +22,45 @@
 <div class="row-100-block whited">
     <div class="col-20"></div>
     <div class="col-60-inline-flex">
-        <div class="row-100-block" th:each="category : ${categories}">
-            <p th:text="${category.getSportTag().getName()}"></p>
+        <div class="row-100-block">
+            <div class="row-100-block shadow" th:each="category, stat : ${categories}" style="margin: 1vh">
+                <div id="st">
+                    <div class="col-80">
+                        <div th:id="${stat.index}" onclick="openPosts(this.id)" style="cursor: pointer">
+                            <div class="row-100-block text-center">
+                                <h2 th:text="${category.getSportTag().getName()}"></h2>
+                            </div>
+                            <div class="row-100-block">
+                                <p th:text="${category.getSportTag().getDescription()}"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-20">
+                        <img class="image" th:src="${category.getSportTag().getImagePath()}">
+                    </div>
+                </div>
+                <div class="col-100" th:id="'cp-' + ${stat.index}" style="display: none">
+                    <div th:each="post, pStat : ${category.getPosts()}" class="col-100 margin-bottom-2 shadow">
+                        <div class="col-60 media-type">
+                            <h2 th:text="${post.getName()}"></h2>
+                            <p th:text="${post.getAnnotation()}"></p>
+                        </div>
+                        <div class="col-40 media-type">
+                            <img class="image" th:src="${post.getImagePath()}">
+                        </div>
+                    </div>
+                </div>
+                <script>
+                    function openPosts(index){
+                        let check = document.getElementById('cp-' + index);
+                        if(check.style.display === 'none'){
+                            document.getElementById('cp-' + index).style.display='block';
+                        }else{
+                            document.getElementById('cp-' + index).style.display='none';
+                        }
+                    }
+                </script>
+            </div>
         </div>
     </div>
     <div class="col-20"></div>
