--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -26,6 +26,7 @@
         <div th:insert="~{content/reg-page}" th:if="${index} == 'reg-page'"></div>
         <div th:insert="~{content/tag-page}" th:if="${index} == 'tag-page'"></div>
         <div th:insert="~{content/add-post-page}" th:if="${index} == 'add-post-page'"></div>
+        <div th:insert="~{content/edit-post-page}" th:if="${index} == 'edit-post-page'"></div>
 
         <footer th:insert="~{blocks/footer}"></footer>
 
