--- a/src/main/resources/static/css/color-and-align.css
+++ b/src/main/resources/static/css/color-and-align.css
@@ -59,6 +59,27 @@ body {
 .input-button:hover {
     background: royalblue;
     color: whitesmoke;
+    border: solid darkblue 1px;
+    text-decoration: none;
+}
+
+.link-button {
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    font-size: 18px;
+    background: lightgray;
+    color: black;
+    padding: 1vh 2vh;
+    border: solid gray 1px;
+    border-radius: 10px;
+}
+
+.link-button:hover {
+    text-decoration: none;
+    background-color: royalblue;
+    border: solid darkblue 1px;
+    color: whitesmoke;
 }
 
 .link-decoration {
